--- a/adsense.html
+++ b/adsense.html
@@ -7,6 +7,6 @@
     <title>google adsense</title>
 </head>
 <body>
-    <a href="https://withdewhua.space/go/zhs/" target="_top"><img src="https://pic.superbed.cn/item/5cad877a3a213b0417f966bb"></a>
+    <a href="https://withdewhua.space/go/zhs/" target="_top"><img src="https://pic3.superbed.cn/item/5cad877a3a213b0417f966bb"></a>
 </body>
 </html>
